# AIVoice

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
.claude/: DECISIONS.md  HANDOFF.md
.claude/commands/: codex.md
.claude/rules/: docs.md  implementation.md  secrets.md  validation.md
docs/: aivoice-mvp-plan.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  hotkey.rs  inject.rs  lib.rs  main.rs  mode.rs  polish.rs  session_service.rs  settings.rs  state.rs  tray.rs
src-tauri/src/audio/: mod.rs  types.rs  wasapi.rs
src-tauri/src/speech/: mock.rs  mod.rs  openai_compatible.rs
src/components/: FloatingBar.tsx  MockTrigger.tsx  ModeSwitch.tsx  SessionPanel.tsx  SettingsPanel.tsx
